--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
-  <title>Sample styled page</title>
+  <title>MePlan</title>
   <style>
    body { background: navy; }
    h1 { background: green; color: blue; font-weight: bold; }
@@ -10,6 +10,6 @@
  </head>
  <body>
   <h1>Sample styled page</h1>
-  <p>This page is just a demo.</p>
+  <p>Welcome to MePlan, the most intuitive place to plan your work/life.</p>
  </body>
 </html>
