--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
  <head>
   <title>MePlan</title>
   <style>
-   body { background: navy; }
-   h1 { background: green; color: blue; font-weight: bold; }
-   p { background: blue; color: white; }
+   body { background: whitesmoke; }
+   h1 { background: lightgray; color: black; font-weight: bold; }
+   p { background: white; color: dimgray; }
   </style>
  </head>
  <body>
