--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
-  <title>MePlan</title>
+  <title>HCI Project</title>
   <style>
    body { background: whitesmoke; }
    h1 { background: lightgray; color: black; font-weight: bold; }
@@ -9,7 +9,7 @@
   </style>
  </head>
  <body>
-  <h1>Sample styled page</h1>
+  <h1>MePlan</h1>
   <p>Welcome to MePlan, the most intuitive place to plan your work/life.</p>
  </body>
 </html>
