--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
  <body>
   <h1>MePlan</h1>
   <p>Welcome to MePlan, the most intuitive place to plan your work/life.</p>
+  <p id="demo">JavaScript can change HTML content.</p>
+  <button type="button" onclick='document.getElementById("demo").innerHTML = "Hello JavaScript!"'>Click Me!</button>
  </body>
 </html>
