--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <p>Welcome to MePlan, the most intuitive place to plan your work/life.</p>
   <p id="demo">JavaScript can change HTML content.</p>
   <button type="button" onclick='document.getElementById("demo").innerHTML = "Hello JavaScript!"'>Click Me!</button>
-  <input></input>
+  <p>Type whatever you'd like. It doesn't do anything yet...</p>
+  <form><input></form>
  </body>
 </html>
