--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
  <body>
   <h1>MePlan</h1>
   <p>Welcome to MePlan, the most intuitive place to plan your work/life.</p>
+  <button onclick="window.location.href='https://cs-hci-group8.github.io/moveableChecklist.html'">Moveable Checklist Test</button>
   <p id="demo">To-do</p>
   <!-- <button type="button" onclick='document.getElementById("demo").innerHTML = "Done!"'>Finished?</button> -->
   <!-- <p onclick="changeText(this)">[?] (Clickable text)</p> -->
