--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <head>
   <title>HCI Project</title>
   <style>
-   body { background: whitesmoke; }
+   body { background: whitesmoke; font-family: Georgia; }
    h1 { background: lightgray; color: black; font-weight: bold; }
    p { background: white; color: dimgray; }
   </style>
