--- a/index.html
+++ b/index.html
@@ -47,6 +47,23 @@
     import { getAuth } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-auth.js'
     import { getFirestore } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore.js'
   </script>
+  <script type="module">
+    // ...
+   
+    // TODO: Replace the following with your app's Firebase project configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyDLuXHdz2mZmxGllkKIdAP3XItAqhsuhMY",
+      authDomain: "hci-planner-2023.firebaseapp.com",
+      projectId: "hci-planner-2023",
+      storageBucket: "hci-planner-2023.appspot.com",
+      messagingSenderId: "110333384674",
+      appId: "1:110333384674:web:3477019ed9316699018bbb",
+      measurementId: "G-RH7JYVTZRS"
+    };
+   
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+  </script>
   
  </body>
  
