--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
     document.body.appendChild(p);
    }
   </script>
+  
   <!-- <script>
    function changeText(id) {
     id.innerHTML = "[!] My first assignment";
    }
   </script> -->
+  
   <!-- Insert this script at the bottom of the HTML, but before you use any Firebase services -->
   <script type="module">
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-app.js'
@@ -47,10 +49,10 @@
     import { getAuth } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-auth.js'
     import { getFirestore } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore.js'
   </script>
+  
   <script type="module">
     // ...
    
-    // TODO: Replace the following with your app's Firebase project configuration
     const firebaseConfig = {
       apiKey: "AIzaSyDLuXHdz2mZmxGllkKIdAP3XItAqhsuhMY",
       authDomain: "hci-planner-2023.firebaseapp.com",
@@ -63,6 +65,7 @@
    
     // Initialize Firebase
     const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
   </script>
   
  </body>
