--- a/index.html
+++ b/index.html
@@ -38,16 +38,25 @@
    }
   </script> -->
   
+  <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore-compat.js"></script>
+  
   <!-- Insert this script at the bottom of the HTML, but before you use any Firebase services -->
   <script type="module">
-    import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-app.js'
+   import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-app.js'
    
-    // If you enabled Analytics in your project, add the Firebase SDK for Google Analytics
-    import { getAnalytics } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-analytics.js'
+   // If you enabled Analytics in your project, add the Firebase SDK for Google Analytics
+   import { getAnalytics } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-analytics.js'
    
-    // Add Firebase products that you want to use
-    import { getAuth } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-auth.js'
-    import { getFirestore } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore.js'
+   // Add Firebase products that you want to use
+   import { getAuth } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-auth.js'
+   import { getFirestore } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore.js'
+
+
+   // Pasted/inserted from a documentation article. There are a lot of imports to do but get ready for things to start happening...
+   import firebase from "firebase/compat/app";
+   // Required for side-effects
+   import "firebase/firestore";
   </script>
   
   <script type="module">
