--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
    <input type="text" id="textInput">
    <input type="button" onclick="addElement()">
   </form>
+
   
   <script>
    function addElement() {
@@ -75,6 +76,20 @@
     // Initialize Firebase
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
+  </script>
+
+  <script>
+   db.collection("users").add({
+    first: "Ada",
+    last: "Lovelace",
+    born: 1815
+   })
+   .then((docRef) => {
+    console.log("Document written with ID: ", docRef.id);
+   })
+   .catch((error) => {
+    console.error("Error adding document: ", error);
+   });
   </script>
   
  </body>
