--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
     id.innerHTML = "[!] My first assignment";
    }
   </script> -->
+
   
-  <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-app-compat.js"></script>
+  <!-- <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore-compat.js"></script>
   
   <!-- Insert this script at the bottom of the HTML, but before you use any Firebase services -->
@@ -91,7 +92,8 @@
    .catch((error) => {
     console.error("Error adding document: ", error);
    });
-  </script>
+  </script> -->
+
   
  </body>
  
